--- a/estilos/style.css
+++ b/estilos/style.css
@@ -146,3 +146,18 @@ svg{
     transition: 0.2s;
 }
 /*Section 1*/
+
+/*Conteiners*/
+.container{
+    
+    width: 75%;
+    margin: auto;
+}
+/*Conteiners*/
+
+/**/
+#conteudo{
+    width: 100%;
+    height: 700px;
+    background-color: rgba(255, 255, 2, 0.984);
+}
