--- a/estilos/style.css
+++ b/estilos/style.css
@@ -61,7 +61,7 @@ header > a{
     background-color: black;
 }
 #choose-location > nav > ul{
-    width: 90%;
+    width: 100%;
     height: 40px;
     list-style: none;
     display: flex;
@@ -77,6 +77,7 @@ header > a{
     align-items: center;
     justify-content: center;
     font-family: var(--featured_font);
+    font-size: 0.9em;
     text-decoration: none;
     color: white;
 }
@@ -88,6 +89,7 @@ header > a{
 }
 .options > svg{
     fill: white;
-    width: 15px;
+    width: 14px;
     margin-right: 8px;
 }
+
