--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,14 +14,17 @@
 }
 
 body{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    font-family: var(--featured_font);
+    background-color: #e9e8e8;
 }
 
 /*Header*/
 header{
     width: 100%;
     height: 50px;
+    background-color: white;
     border-bottom: 1px solid rgb(181, 181, 181);
     display: flex;
     align-items: center;
@@ -47,7 +50,7 @@ header > a{
 }
 /*Header*/
 
-/*Section Local*/
+/*Section Londres*/
 #londres{
     width: 100%;
 }
@@ -92,4 +95,279 @@ header > a{
     width: 14px;
     margin-right: 8px;
 }
+#form-top{
+    width: 100%;
+}
+#form-top > form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#form-top > form > div{
+    width: 100%;
+}
+#form-top > form > p{
+    font-family: var(--featured_font);
+    font-size: 1.5em;
+    font-weight: 300;
+    padding: 20px 0px;
+}
+.from-to{
+    width: 100%;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+}
+.from-to > input{
+    width: 80%;
+    height: 35px;
+    padding: 5px;
+    border: 1px solid rgb(173, 168, 168);
+    display: block;
+    margin: auto;
+}
+.from-to > label{
+    width: 80%;
+    margin: auto;
+}
+#form-top > form > input{
+    width: 60%;
+    height: 35px;
+    background-color: gray;
+    color: white;
+    border: none;
+    margin: 10px 0px 35px 0px;
+    font-family: var(--featured_font);
+    cursor: pointer;
+}
+#form-top > form > input:hover{
+    background-color: rgb(255, 67, 34);
+    transition: 0.3s;
+}
+/*Section Londres*/
 
+/*Main*/
+
+main{
+    width: 290px;
+    margin: auto;
+}
+
+/*Section IMGS*/
+main > #imgs > h1{
+    font-family: var(--featured_font);
+    font-size: 1.5em;
+    font-weight: 400;
+    padding-top: 50px;
+}
+main > #imgs > p{
+    font-family: var(--featured_font);
+    padding: 10px 0px;
+}
+main > #imgs{
+    width: 100%;
+}
+#cinque{
+    width: 100%;
+    position: relative;
+    margin-bottom: 15px;
+}
+#cinque > img{
+    width: 290px;
+}
+#cinque > p{
+    position: absolute;
+    bottom: 10px;
+    left: 5px;
+    font-family: var(--featured_font);
+    font-size: 0.9em;
+    color: white;
+}
+#four-img{
+    width: 100%;
+}
+.group-img{
+    width: 100%;
+    margin-bottom: 15px;
+    position: relative;
+}
+.group-img > img{
+    width: 290px;
+}
+.group-img > p{
+    position: absolute;
+    bottom: 10px;
+    left: 5px;
+    font-family: var(--featured_font);
+    font-size: 0.9em;
+    color: white;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.744);
+}
+/*Section IMGS*/
+
+/*Section Explore*/
+#explore{
+    width: 100%;
+}
+#explore > h1{
+    font-size: 1.5em;
+    font-weight: 400;
+    padding: 10px 0px;
+}
+#explore > p{
+    padding: 5px 0px 10px 0px;
+}
+#landscape{
+    width: 100%;
+}
+.nature{
+    width: 100%;
+    margin-bottom: 20px;
+    background-color: white;
+}
+.nature > img{
+    width: 290px;
+}
+.nature > h2{
+    font-size: 1.3em;
+    font-weight: 400;
+    padding: 8px 10px;
+}
+.nature > .color-p{
+    color: rgb(159, 159, 159);
+}
+.nature p{
+    font-size: 0.9em;
+    padding: 8px 10px;
+}
+.nature > input{
+    height: 30px;
+    color: white;
+    border: none;
+    background-color: gray;
+    margin: 8px 10px 30px 10px;
+    padding: 0px 10px;
+    cursor: pointer;
+}
+.nature > input:hover{
+    background-color: rgb(255, 67, 34);
+    transition: 0.3s;
+}
+/*Section Explore*/
+
+.margin{
+    width: 290px;
+    margin: auto;
+}
+
+/*Section Offers*/
+#offers > div{
+    width: 100%;
+    display: grid;
+    justify-items: start;
+    background-color: gray;
+    padding: 10px 10px 0px 10px ;
+    color: white;
+}
+#offers > div > h2{
+    font-size: 1.5em;
+    padding-top: 15px;
+    font-weight: 400;
+}
+#offers > div > p{
+    font-size: 0.9em;
+    padding: 15px 2px ;
+}
+#best-offers{
+    width: 100%;
+    height: 40px;
+    font-size: 0.9em;
+    padding: 0px 5px;
+}
+#subscribe{
+    height: 30px;
+    color: white;
+    border: none;
+    background-color: rgb(255, 123, 100);
+    margin: 15px 2px;
+    padding: 0px 10px;
+    cursor: pointer;
+}
+#subscribe:hover{
+    background-color: rgb(255, 73, 41);
+    transition: 0.3s;
+}
+/*Section Offers*/
+
+/*Section Contact*/
+#contact > div{
+    width: 100%;
+}
+#contact > div > h3{
+    font-size: 1.5em;
+    font-weight: 400;
+    padding-top: 30px;
+}
+#contact > div > p{
+    padding: 20px 0px;
+}
+#contact > div > ul{
+    list-style: none;
+}
+#contact > div > ul > li{
+    padding-bottom: 10px;
+}
+#contact > div > ul > li > i{
+    margin-right: 30px;
+}
+#contact > div > form{
+    width: 100%;
+    display: grid;
+    justify-items: start;
+}
+.contact-me{
+    width: 100%;
+    height: 35px;
+    padding: 5px;
+    margin-bottom: 15px;
+}
+#send{
+    width: 130px;
+    height: 35px;
+    padding: 5px;
+    margin-bottom: 15px;
+    color: white;
+    background-color: black;
+    border: 0;
+    cursor: pointer;
+}
+#send:hover{
+    background-color: rgb(77, 77, 77);
+    transition: 0.3s;
+}
+/*Section Contact*/
+
+/*footer*/
+footer{
+    width: 290px;
+    margin: auto;
+    text-align: center;
+}
+footer > p{
+    padding: 10px 0px;
+}
+footer > p > a{
+    color: black;
+}
+#network{
+    width: 100%;
+    padding: 15px 0px;
+}
+#network > a{
+    margin: 0px 3px;
+    font-size: 25px;
+    color: gray;
+}
+/*footer*/
